# sweeper

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
configs/training/: cnn.toml  expert.toml
docs/architecture/: board-contract.md  environment-contract.md  reproducibility.md  strategy-playbook.md  training-handoff.md
docs/planning/: project-structure.md  roadmap.md
docs/research/: board-size-generalization.md  expert-experiment.md  strategy-ablation.md  strategy-model-result.md
src/sweeper/: __init__.py  presets.py  service.py
src/sweeper/agents/: __init__.py  base.py  heuristic.py  learned_hybrid.py  neural.py  random_agent.py  reasoning.py
src/sweeper/data/: __init__.py  __main__.py  generate.py
src/sweeper/environment/: __init__.py  board.py  environment.py
src/sweeper/evaluation/: __init__.py  __main__.py  benchmark.py
src/sweeper/models/: __init__.py  augment.py  cnn.py  (+4 more)
tests/: test_package.py  test_presets.py  test_service.py
tests/agents/: test_baselines.py  test_neural.py
tests/data/: test_generate.py
tests/environment/: test_board.py  test_environment.py
tests/evaluation/: test_benchmark.py  test_cli.py
tests/models/: test_augment.py  test_calibration.py  test_cnn.py  test_train_resume.py
tests/reporting/: test_summary.py
tests/representation/: test_constraints.py
tests/solvers/: test_exact.py  test_symbolic.py
web/: .gitignore  README.md  package-lock.json  package.json
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  page.tsx
web/tests/: rendered-html.test.mjs
(+21 files in other folders)
